<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint1"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:maxLines="1"
            android:digits="0123456789,"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint2"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_below="@id/editText1"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:maxLines="1"
            android:digits="0123456789,"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint3"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_below="@id/editText2"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:maxLines="1"
            android:digits="0123456789,"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonText"
            android:textAllCaps="false"
            android:layout_below="@id/editText3"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/buttonText2"
            android:layout_below="@id/buttonCalculate"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text=""
            android:layout_below="@id/buttonClear"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

</RelativeLayout>
